--- a/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_1.post.css
+++ b/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_1.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: var(--screen-l)) {
+@media screen and (min-width: 1280px) {
 	.tpl-grid__fraction_l-col_1 {
 		grid-column: span 1;
 	}
