--- a/common.blocks/tpl-grid/__fraction/_s-col/tpl-grid__fraction_s-col_1.post.css
+++ b/common.blocks/tpl-grid/__fraction/_s-col/tpl-grid__fraction_s-col_1.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: var(--screen-s)) {
+@media screen and (min-width: $screen-s) {
 	.tpl-grid__fraction_s-col_1 {
 		grid-column: span 1;
 	}
