--- a/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_6.post.css
+++ b/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_6.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: var(--screen-l)) {
+@media screen and (min-width: $screen-l) {
 	.tpl-grid__fraction_l-col_6 {
 		grid-column: span 6;
 	}
