--- a/common.blocks/tpl-grid/__fraction/_m-col/tpl-grid__fraction_m-col_8.post.css
+++ b/common.blocks/tpl-grid/__fraction/_m-col/tpl-grid__fraction_m-col_8.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: var(--screen-m)) {
+@media screen and (min-width: $screen-m) {
 	.tpl-grid__fraction_m-col_8 {
 		grid-column: span 8;
 	}
