--- a/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-25-50-25.post.css
+++ b/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-25-50-25.post.css
@@ -1,3 +1,3 @@
 .tpl-layout_structure_fold-25-50-25 {
-	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) / 0.25) calc((100% - var(--menu-fold)) / 0.5) calc((100% - var(--menu-fold)) / 0.25);
+	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) * 0.25) calc((100% - var(--menu-fold)) * 0.5) calc((100% - var(--menu-fold)) * 0.25);
 }
