--- a/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-30-70.post.css
+++ b/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-30-70.post.css
@@ -1,3 +1,3 @@
 .tpl-layout_structure_fold-30-70 {
-	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) / 0.3) calc((100% - var(--menu-fold)) / 0.7);
+	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) * 0.3) calc((100% - var(--menu-fold)) * 0.7);
 }
