--- a/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-50-50.post.css
+++ b/common.blocks/tpl-layout/_structure/tpl-layout_structure_fold-50-50.post.css
@@ -1,3 +1,3 @@
 .tpl-layout_structure_fold-50-50 {
-	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) / 2) calc((100% - var(--menu-fold)) / 2);
+	grid-template-columns: var(--menu-fold) calc((100% - var(--menu-fold)) * 2) calc((100% - var(--menu-fold)) * 2);
 }
