--- a/common.blocks/tpl-layout/_structure/tpl-layout_structure_unfold-70-30.post.css
+++ b/common.blocks/tpl-layout/_structure/tpl-layout_structure_unfold-70-30.post.css
@@ -1,3 +1,3 @@
 .tpl-layout_structure_unfold-30-70 {
-	grid-template-columns: var(--menu-unfold) calc((100% - var(--menu-unfold)) / 0.7) calc((100% - var(--menu-unfold)) / 0.3);
+	grid-template-columns: var(--menu-unfold) calc((100% - var(--menu-unfold)) * 0.7) calc((100% - var(--menu-unfold)) * 0.3);
 }
