--- a/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_5.post.css
+++ b/common.blocks/tpl-grid/__fraction/_l-col/tpl-grid__fraction_l-col_5.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: $screen-l) {
+@media screen and (min-width: $screen-l) and (max-width: $screen-xl) {
 	.tpl-grid__fraction_l-col_5 {
 		grid-column: span 5;
 	}
