--- a/common.blocks/tpl-grid/__fraction/_xl-col/tpl-grid__fraction_xl-col_6.post.css
+++ b/common.blocks/tpl-grid/__fraction/_xl-col/tpl-grid__fraction_xl-col_6.post.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: $screen-xl) {
+@media screen and (min-width: $screen-m) and (max-width: 2500px) {
 	.tpl-grid__fraction_xl-col_6 {
 		grid-column: span 6;
 	}
